--- a/TF_AcrR_redesign/pocket_redesign/cotimed_predict/analysis_model.ipynb
+++ b/TF_AcrR_redesign/pocket_redesign/cotimed_predict/analysis_model.ipynb
@@ -55,7 +55,8 @@
     "        print(predict_path)\n",
     "        confidence_files = os.listdir(predict_path)\n",
     "\n",
-    "\n",
+    "        /home/hdwang/sensor_hd/TransF_biosensor/AcrR_EST_stru/apo/boltz_results_AcrR_1/predictions/AcrR_1/confidence_AcrR_1_model_0.json\n",
+    "        /home/hdwang/sensor_hd/TransF_biosensor/AcrR_EST_stru/apo/boltz_results_AcrR_35/predictions/AcrR_35\n",
     "        try:\n",
     "            confidence_files_real = os.path.join(predict_path, confidence_files[0])\n",
     "            print(f'processing {confidence_files_real}')\n",
@@ -98,25 +99,157 @@
     "\n",
     "# extract confidence score and probability binary\n",
     "\n",
-    "pdb_boltz_folder = \"/home/hdwang/AcrR_EST_stru/apo\"\n",
+    "pdb_boltz_folder = \"/home/hdwang/sensor_hd/TransF_biosensor/AcrR_EST_stru/apo\"\n",
     "prot_name = \"AcrR\"\n",
-    "wt_pdb = \"/home/hdwang/TransF_biosensor/TF_AcrR_redesign/pocket_redesign/cotimed_predict/pdb/AcrR_apo.pdb\"\n",
+    "wt_pdb = \"/home/hdwang/sensor_hd/TransF_biosensor/TF_AcrR_redesign/pocket_redesign/cotimed_predict/pdb/AcrR_apo.pdb\"\n",
     "prase_boltz_confidence_results(pdb_boltz_folder, prot_name, wt_pdb)\n",
     "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3668c15",
+   "metadata": {},
+   "source": [
+    "Generating the aligment pymol sessions for apo/holo models from aligned_pdb_boltz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92c2754b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymol import cmd\n",
+    "\n",
+    "\n",
+    "# Load the PDB file\n",
+    "model_1_path = '/home/hdwang/sensor_hd/TransF_biosensor/TF_AcrR_redesign/pocket_redesign/cotimed_predict/helperfunction/aligned_pdb_boltz/AcrR_1_model_0/AcrR_1_model_0_rmsd_0.70.pdb'\n",
+    "holo_path = '/home/hdwang/sensor_hd/TransF_biosensor/TF_AcrR_redesign/pocket_redesign/cotimed_predict/pdb/WT_AcrR_EST_model_0.pdb'\n",
+    "cmd.load(holo_path, 'holo_AcrR')\n",
+    "cmd.load(model_1_path, 'model_1')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c6e85795",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alignment RMSD (CA): 0.865 Å\n",
+      "Saved figure: AcrR_whole_alignment.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "# render_alignment.py\n",
+    "import os\n",
+    "from pymol import cmd\n",
+    "\n",
+    "def safe_obj_name(path: str) -> str:\n",
+    "    base = os.path.splitext(os.path.basename(path))[0]\n",
+    "    return \"\".join(c if c.isalnum() or c in \"_-\" else \"_\" for c in base)\n",
+    "\n",
+    "def style_whole_alignment(holo_obj: str, model_obj: str):\n",
+    "    cmd.bg_color(\"white\")\n",
+    "    cmd.hide(\"everything\", \"all\")\n",
+    "\n",
+    "    # Show protein cartoons\n",
+    "    cmd.show(\"cartoon\", f\"{holo_obj} or {model_obj}\")\n",
+    "    cmd.set(\"cartoon_fancy_helices\", 1)\n",
+    "    cmd.set(\"cartoon_fancy_sheets\", 1)\n",
+    "    cmd.set(\"cartoon_transparency\", 0.35, holo_obj)  # make holo semi-transparent\n",
+    "\n",
+    "    # Colors\n",
+    "    cmd.color(\"gray70\", holo_obj)\n",
+    "    cmd.color(\"tv_blue\", model_obj)\n",
+    "\n",
+    "    # Ligands as sticks (non-protein, non-solvent)\n",
+    "    for obj, col in [(holo_obj, \"salmon\"), (model_obj, \"forest\")]:\n",
+    "        lig_sel = f\"({obj}) and not polymer.protein and not solvent\"\n",
+    "        if cmd.count_atoms(lig_sel) > 0:\n",
+    "            cmd.show(\"sticks\", lig_sel)\n",
+    "            cmd.color(col, lig_sel)\n",
+    "\n",
+    "    # Lines for metals/ions (optional)\n",
+    "    cmd.show(\"spheres\", f\"({holo_obj} or {model_obj}) and inorganic\")\n",
+    "    cmd.set(\"sphere_scale\", 0.25)\n",
+    "\n",
+    "    # Nice image settings\n",
+    "    cmd.set(\"antialias\", 2)\n",
+    "    cmd.set(\"ray_shadows\", 0)\n",
+    "    cmd.set(\"specular\", 0.2)\n",
+    "    cmd.set(\"ambient\", 0.6)\n",
+    "    cmd.set(\"depth_cue\", 0)  # disable fog\n",
+    "\n",
+    "def align_and_render(holo_path: str, model_path: str, out_png: str, method: str = \"align\",\n",
+    "                     width: int = 2400, height: int = 1800, dpi: int = 300):\n",
+    "    cmd.reinitialize()\n",
+    "\n",
+    "    holo_obj = safe_obj_name(holo_path) + \"_holo\"\n",
+    "    model_obj = safe_obj_name(model_path)\n",
+    "\n",
+    "    cmd.load(holo_path, holo_obj)\n",
+    "    cmd.load(model_path, model_obj)\n",
+    "\n",
+    "    # Optional: remove waters/solvent\n",
+    "    cmd.remove(f\"({holo_obj} or {model_obj}) and solvent\")\n",
+    "\n",
+    "    ref = f\"{holo_obj} and polymer.protein and name CA\"\n",
+    "    mob = f\"{model_obj} and polymer.protein and name CA\"\n",
+    "\n",
+    "    if method == \"super\":\n",
+    "        rms = cmd.super(mob, ref)[0]\n",
+    "    else:\n",
+    "        rms = cmd.align(mob, ref)[0]\n",
+    "\n",
+    "    print(f\"Alignment RMSD (CA): {rms:.3f} Å\")\n",
+    "\n",
+    "    style_whole_alignment(holo_obj, model_obj)\n",
+    "\n",
+    "    # Zoom to whole proteins\n",
+    "    cmd.zoom(f\"{holo_obj} or {model_obj}\")\n",
+    "\n",
+    "    # Set viewport and render\n",
+    "    cmd.viewport(width, height)\n",
+    "    cmd.png(out_png, width=width, height=height, dpi=dpi, ray=1)\n",
+    "    print(f\"Saved figure: {out_png}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Example paths (replace with yours)\n",
+    "    holo_path = \"/home/hdwang/sensor_hd/TransF_biosensor/TF_AcrR_redesign/pocket_redesign/cotimed_predict/pdb/WT_AcrR_EST_model_0.pdb\"\n",
+    "    model_path = \"/home/hdwang/sensor_hd/TransF_biosensor/TF_AcrR_redesign/pocket_redesign/cotimed_predict/helperfunction/aligned_pdb_boltz/AcrR_1_model_0/AcrR_1_model_0_rmsd_0.70.pdb\"\n",
+    "    out_png = \"AcrR_whole_alignment.png\"\n",
+    "\n",
+    "    align_and_render(holo_path, model_path, out_png, method=\"align\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my-rdkit-env",
+   "display_name": "pyrosetta_env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.14.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
